tests/sema/negative/duplicate_struct.nv
struct Point {
    x: int;
}

struct Point {
    y: int;
}

fn main() : void {
    return;
}
